fix spacing contact form

--- a/assets/contact.css
+++ b/assets/contact.css
@@ -81,7 +81,7 @@ body {
         display:block;
     }
 
-    .text-input{
+    .top-inputs .fgrp{
         margin-bottom:2rem;
     }
 }
